--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     <div class="container">
         <div class="profile-header">
-            <div class="avatar" style="background-image: url('https://via.placeholder.com/100/667eea/ffffff?text=B');"></div>
+            <div class="avatar" style="background-image: url('https://stvrrr.vercel.app/images/avatar.jpg');"></div>
             <h1>Berk</h1>
             <p class="bio">
                 <a href="#link1" class="bio-icon" style="background-image: url('https://via.placeholder.com/28/667eea/ffffff?text=1');" title="Link 1"></a>
@@ -289,7 +289,7 @@
 
         <div class="footer">
             <div class="view-count">
-                <span class="view-count-icon">👁️</span>
+                <span class="view-count-icon"></span>
                 <span id="viewCounter">0</span> views
             </div>
             Made with ♥
