--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>star's portfolio</title>
     <style>
         * {
             margin: 0;
@@ -12,7 +12,7 @@
         }
 
         body {
-            background-image: url('https://images.unsplash.com/photo-1579546929518-9e396f3cc809?w=1920&q=80');
+            background-image: url('https://stvrrr.vercel.app/images/background.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -236,7 +236,7 @@
     <div class="container">
         <div class="profile-header">
             <div class="avatar" style="background-image: url('https://stvrrr.vercel.app/images/avatar.jpg');"></div>
-            <h1>Berk</h1>
+            <h1>stvrrr</h1>
             <p class="bio">
                 <a href="#link1" class="bio-icon" style="background-image: url('https://via.placeholder.com/28/667eea/ffffff?text=1');" title="Link 1"></a>
                 <a href="#link2" class="bio-icon" style="background-image: url('https://via.placeholder.com/28/764ba2/ffffff?text=2');" title="Link 2"></a>
