--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            background-image: url('https://stvrrr.vercel.app/images/background.jpg');
+            background-image: url('https://stvrrr.vercel.app/images/background.gif');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
