--- a/index.html
+++ b/index.html
@@ -295,32 +295,32 @@
         <div class="links">
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/website.png" alt="Website" class="link-icon">
-                    <span>Website</span>
+                    <img src="https://stvrrr.vercel.app/images/discord.png" alt="Website" class="link-icon">
+                    <span>Super Stars Discord</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/twitter.png" alt="Twitter" class="link-icon">
-                    <span>Twitter</span>
+                    <img src="https://stvrrr.vercel.app/images/discord.png" alt="Twitter" class="link-icon">
+                    <span>VILE Clan Discord</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/linkedin.png" alt="LinkedIn" class="link-icon">
-                    <span>LinkedIn</span>
+                    <img src="https://stvrrr.vercel.app/images/tiktok.png" alt="LinkedIn" class="link-icon">
+                    <span>My Tiktok</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/email.png" alt="Email" class="link-icon">
-                    <span>Email</span>
+                    <img src="https://stvrrr.vercel.app/images/tiktok.png" alt="Email" class="link-icon">
+                    <span>VILE Clan Tiktok</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
@@ -336,7 +336,7 @@
 
         <div class="footer">
             <div class="view-count">
-                <img src="https://stvrrr.vercel.app/images/eye.png" alt="Views" class="view-count-icon">
+                <img src="https://stvrrr.vercel.app/images/views.png" alt="Views" class="view-count-icon">
                 <span id="viewCounter">0</span> views
             </div>
             Made with ♥
