--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </style>
 </head>
 <body>
-    <img src="https://stvrrr.vercel.app/images/background.png" alt="Background" class="bg-image">
+    <img src="https://stvrrr.vercel.app/images/background.gif" alt="Background" class="bg-image">
     
     <audio id="bgMusic" loop>
         <source src="your-music-file.mp3" type="audio/mpeg">
@@ -273,7 +273,7 @@
     <div class="container">
         <div class="profile-header">
             <div class="avatar">
-                <img src="https://stvrrr.vercel.app/images/avatar.png" alt="Avatar">
+                <img src="https://stvrrr.vercel.app/images/avatar.jpg" alt="Avatar">
             </div>
             <h1>Berk</h1>
             <p class="bio">
