--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="avatar">
                 <img src="https://stvrrr.vercel.app/images/avatar.jpg" alt="Avatar">
             </div>
-            <h1>Berk</h1>
+            <h1>stvrrr.</h1>
             <p class="bio">
                 <a href="#link1" title="Link 1">
                     <img src="https://stvrrr.vercel.app/images/icon1.png" alt="Icon 1" class="bio-icon">
