--- a/index.html
+++ b/index.html
@@ -277,17 +277,11 @@
             </div>
             <h1>stvrrr.</h1>
             <p class="bio">
-                <a href="#link1" title="Link 1">
-                    <img src="https://stvrrr.vercel.app/images/icon1.png" alt="Icon 1" class="bio-icon">
+                <a href="https://discord.gg/qcTCBtGG" title="Link 1">
+                    <img src="https://stvrrr.vercel.app/images/discord.png" alt="icon 1" class="bio-icon">
                 </a>
                 <a href="#link2" title="Link 2">
-                    <img src="https://stvrrr.vercel.app/images/icon2.png" alt="Icon 2" class="bio-icon">
-                </a>
-                <a href="#link3" title="Link 3">
-                    <img src="https://stvrrr.vercel.app/images/icon3.png" alt="Icon 3" class="bio-icon">
-                </a>
-                <a href="#link4" title="Link 4">
-                    <img src="https://stvrrr.vercel.app/images/icon4.png" alt="Icon 4" class="bio-icon">
+                    <img src="https://stvrrr.vercel.app/images/youtube.png" alt="icon 2" class="bio-icon">
                 </a>
             </p>
         </div>
