--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
                 <a href="#link2" title="Link 2">
                     <img src="https://stvrrr.vercel.app/images/youtube.png" alt="icon 2" class="bio-icon">
                 </a>
+                <a href="#link2" title="Link 2">
+                    <img src="https://stvrrr.vercel.app/images/roblox.png" alt="icon 2" class="bio-icon">
+                </a>
             </p>
         </div>
 
