--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
     <img src="https://stvrrr.vercel.app/images/background.gif" alt="Background" class="bg-image">
     
     <audio id="bgMusic" loop>
-        <source src="your-music-file.mp3" type="audio/mpeg">
-        <source src="your-music-file.mp4" type="audio/mp4">
+        <source src="music1.mp3" type="audio/mpeg">
     </audio>
 
     <script>
