--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
         }
     })();
     </script>
+    <script src="ayo.js"></script>
 
     <div class="container">
         <div class="profile-header">
