--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <img src="https://stvrrr.vercel.app/images/background.gif" alt="Background" class="bg-image">
     
     <audio id="bgMusic" loop>
-        <source src="music1.mp3" type="audio/mpeg">
+        <source src="https://stvrrr.vercel.app/music1.mp3" type="audio/mpeg">
     </audio>
 
     <script>
