--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <img src="https://stvrrr.vercel.app/images/background.gif" alt="Background" class="bg-image">
     
     <audio id="bgMusic" loop>
-        <source src="music1.mp3" type="audio/mpeg">
+        <source src="SpotiMate.io - FALL FROM THE SKY PT. 2 - SLOWED - RomancePlanet (1).mp3" type="audio/mpeg">
     </audio>
 
     <div class="container">
