--- a/index.html
+++ b/index.html
@@ -257,19 +257,16 @@
             <div class="avatar">
                 <img src="https://stvrrr.vercel.app/images/avatar.jpg" alt="Avatar">
             </div>
-            <h1>Berk</h1>
+            <h1>stvrrr.</h1>
             <p class="bio">
-                <a href="#link1" title="Link 1">
-                    <img src="https://stvrrr.vercel.app/images/icon1.png" alt="Icon 1" class="bio-icon">
+                <a href="#" title="Link 1">
+                    <img src="https://stvrrr.vercel.app/images/discord.png" alt="Icon 1" class="bio-icon">
                 </a>
-                <a href="#link2" title="Link 2">
-                    <img src="https://stvrrr.vercel.app/images/icon2.png" alt="Icon 2" class="bio-icon">
+                <a href="#" title="Link 2">
+                    <img src="https://stvrrr.vercel.app/images/youtube.png" alt="Icon 2" class="bio-icon">
                 </a>
-                <a href="#link3" title="Link 3">
-                    <img src="https://stvrrr.vercel.app/images/icon3.png" alt="Icon 3" class="bio-icon">
-                </a>
-                <a href="#link4" title="Link 4">
-                    <img src="https://stvrrr.vercel.app/images/icon4.png" alt="Icon 4" class="bio-icon">
+                <a href="#" title="Link 3">
+                    <img src="https://stvrrr.vercel.app/images/roblox.png" alt="Icon 3" class="bio-icon">
                 </a>
             </p>
         </div>
@@ -277,32 +274,32 @@
         <div class="links">
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/website.png" alt="Website" class="link-icon">
-                    <span>Website</span>
+                    <img src="https://stvrrr.vercel.app/images/discord.png" alt="Website" class="link-icon">
+                    <span>[☆] Super Stars [☆] - Discord Server</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/twitter.png" alt="Twitter" class="link-icon">
-                    <span>Twitter</span>
+                    <img src="https://stvrrr.vercel.app/images/discord.png" alt="Twitter" class="link-icon">
+                    <span>VILE Clan - Discord Server</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/linkedin.png" alt="LinkedIn" class="link-icon">
-                    <span>LinkedIn</span>
+                    <img src="https://stvrrr.vercel.app/images/tiktok.png" alt="LinkedIn" class="link-icon">
+                    <span>My TikTok</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
 
             <a href="#" class="link-item">
                 <div class="link-content">
-                    <img src="https://stvrrr.vercel.app/images/email.png" alt="Email" class="link-icon">
-                    <span>Email</span>
+                    <img src="https://stvrrr.vercel.app/images/tiktok.png" alt="Email" class="link-icon">
+                    <span>VILE Clan TikTok</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
@@ -310,17 +307,13 @@
             <a href="#" class="link-item">
                 <div class="link-content">
                     <img src="https://stvrrr.vercel.app/images/github.png" alt="GitHub" class="link-icon">
-                    <span>GitHub</span>
+                    <span>My GitHub</span>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
         </div>
-
-        <div class="footer">
-            Made with ♥
-        </div>
     </div>
-
+   <script src="ayo.js"></script>
     <script>
         // Enter overlay functionality
         const enterOverlay = document.getElementById('enterOverlay');
